--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -8,6 +8,7 @@
 	href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
+
 <body>
 
 	<div class="tab">
@@ -34,7 +35,7 @@
 							</div>
 							<div class="persent-one less-per">
 								<i class="fa fa-calendar" aria-hidden="true"></i>
-								<input type="text" name="dep" class="textboxstyle" id="date" placeholder="Time">
+								<input type="text" name="dep" class="textboxstyle" id="date" placeholder="Date">
 							</div>
 							<div class="persent-one less-btn">
 								<input type="Submit" name="submit" value="Search" id="btn-search" class="btn btn-info cst-btn"
