--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -14,7 +14,7 @@
 	<div class="tab">
 		<button class="tablinks"><a href="signUp.html">Sign Up</a></button>
 		<button class="tablinks"><a href="login.html">Log in</a></button>
-		<button class="tablinks"><a href="flightView.html">View flights</a></button>
+		<button class="tablinks"><a href="planAFlight.html">Plan a Flight</a></button>
 	</div>
 
 	<div class="flight-engine">
