Toutes les pages web

--- a/src/main/webapp/becomeAPilot.html
+++ b/src/main/webapp/becomeAPilot.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>Flight booking</title>
+    <title>Become a Pilot</title>
     <!-- Main css -->
     <link rel="stylesheet" href="css/flight.css">
     <link rel="stylesheet" href="css/home.css">
@@ -8,9 +8,9 @@
 
 <body>
     <div class="tab">
-		<a href="signUp.html"><button class="tablinks"> Sign Up</button></a>
-		<a href="login.html"><button class="tablinks">Log in</button></a>
         <a href="home.html"><button class="tablinks">Home</button></a>
+		<a href="deleteFlight.html"><button class="tablinks">Delete a Flight</button></a>
+		<a href="planAFlight.html"><button class="tablinks">Plan a Flight</button></a>
 	</div>
 
     <div class="main">
@@ -19,11 +19,17 @@
             <div class="container">
                 <div class="flight-content">
                     <div class="flight-form">
-                        <h2 class="form-title">Flight booking</h2>
+                        <h2 class="form-title">Become a Pilot</h2>
                         <!-- method="PUT" action="/ws/coavionnage/users/flight" -->
                         <form class="register-form" id="register-form"> 
                             <div class="form-group">
-                                <input type="number" name="number" id="number" placeholder="Number of places"/>
+                                <input type="text" name="name" id="name" placeholder="Experience"/>
+                            </div>
+                            <div class="form-group">
+                                <input type="text" name="name" id="name" placeholder="Qualifications"/>
+                            </div>
+                            <div class="form-group">
+                                <input type="number" name="number" id="number" placeholder="Number of flight hours"/>
                             </div>
                             <div class="form-group form-button">
                                 <input type="submit" name="valid" id="flight" class="form-submit" value="Valid"/>
@@ -31,7 +37,7 @@
                         </form>
                     </div>
                     <div class="flight-image">
-                        <figure><img src="images/booking2.jpeg" ></figure>
+                        <figure><img src="images/avatar.jpeg" ></figure>
                     </div>
                 </div>
             </div>
