connection of HTML pages Sign up and Sign in with Webservice

--- a/src/main/webapp/signUp.html
+++ b/src/main/webapp/signUp.html
@@ -58,8 +58,7 @@
         </section>
     <!-- JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="js/main.js"></script>
-    <script src="home.js"></script>
+    <script src="js/signUp.js"></script>
 </body>
 </html>
 
