--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -65,6 +65,8 @@
 						<th>Arrival airfield</th>
 						<th>Price</th>
 						<th>Seats available</th>
+						<th>Pilot</th>
+						<th>Booking</th>
 					</tr>
 				</thead>
 				<tbody id="flights-list">
