--- a/src/main/webapp/pilotInformations.html
+++ b/src/main/webapp/pilotInformations.html
@@ -43,7 +43,7 @@
     <!-- JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/main.js"></script>
-    <script src="home.js"></script>
+    <script src="js/pilot.js"></script>
 </body>
 </html>
 
