--- a/src/main/webapp/planAFlight.html
+++ b/src/main/webapp/planAFlight.html
@@ -19,30 +19,30 @@
                     <div class="flight-form">
                         <h2 class="form-title">Plan a flight</h2>
                         <!-- method="PUT" action="/ws/coavionnage/users/flight" -->
-                        <form class="register-form" id="register-form"> 
+                        <form class="plan-flight-form" id="plan-flight-form"> 
                             <div class="form-group">
                                 <label for="name"><i class="zmdi zmdi-account material-icons-name"></i></label>
-                                <input type="text" name="name" id="name" placeholder="Departure airfield"/>
+                                <input type="text" name="departure_airfield" id="departure_airfield" placeholder="Departure airfield"/>
                             </div>
                             <div class="form-group">
                                 <label for="name"><i class="zmdi zmdi-account material-icons-name"></i></label>
-                                <input type="text" name="name" id="name" placeholder="Arrival airfield"/>
+                                <input type="text" name="arrival_airfield" id="arrival_airfield" placeholder="Arrival airfield"/>
                             </div>
                             <div class="form-group">
                                 <label for="name"><i class="zmdi zmdi-account material-icons-name"></i></label>
-                                <input type="text" name="name" id="name" placeholder="Departure time"/>
+                                <input type="text" name="departure_time" id="departure_time" placeholder="Departure time"/>
                             </div>
                             <div class="form-group">
                                 <label for="name"><i class="zmdi zmdi-account material-icons-name"></i></label>
-                                <input type="text" name="name" id="name" placeholder="Arrival time"/>
+                                <input type="text" name="arrival_time" id="arrival_time" placeholder="Arrival time"/>
                             </div>
                             <div class="form-group">
                                 <label for="name"><i class="zmdi zmdi-account material-icons-name"></i></label>
-                                <input type="number" name="number" id="number" placeholder="Number of places available"/>
+                                <input type="number" name="nb_places" id="nb_places" placeholder="Number of places available"/>
                             </div>
                             <div class="form-group">
                                 <label for="name"><i class="zmdi zmdi-account material-icons-name"></i></label>
-                                <input type="text" name="name" id="name" placeholder="Ticket price per passenger"/>
+                                <input type="text" name="ticket_price" id="ticket_price" placeholder="Ticket price per passenger"/>
                             </div>
                             <div class="form-group">
                                 <label for="name"><i class="zmdi zmdi-account material-icons-name"></i></label>
@@ -61,7 +61,6 @@
         </section>
     <!-- JS -->
     <script src="js/main.js"></script>
-    <script src="home.js"></script>
 </body>
 </html>
 
