pilot.js et booking.js

--- a/src/main/webapp/bookFlight.html
+++ b/src/main/webapp/bookFlight.html
@@ -21,7 +21,7 @@
                     <div class="flight-form">
                         <h2 class="form-title">Flight booking</h2>
                         <!-- method="PUT" action="/ws/coavionnage/users/flight" -->
-                        <form class="register-form" id="register-form"> 
+                        <form class="register-form" id="book_flight_form"> 
                             <div class="form-group">
                                 <input type="number" name="number" id="number" placeholder="Number of places"/>
                             </div>
@@ -39,6 +39,7 @@
     <!-- JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/booking.js"></script>
 </body>
 </html>
 
