--- a/src/main/webapp/planAFlight.html
+++ b/src/main/webapp/planAFlight.html
@@ -19,7 +19,7 @@
                     <div class="flight-form">
                         <h2 class="form-title">Plan a flight</h2>
                         <!-- method="PUT" action="/ws/coavionnage/users/flight" -->
-                        <form class="plan-flight-form" id="plan-flight-form"> 
+                        <form class="plan-flight-form" id="plan_flight_form"> 
                             <div class="form-group">
                                 <label for="name"><i class="zmdi zmdi-account material-icons-name"></i></label>
                                 <input type="text" name="departure_airfield" id="departure_airfield" placeholder="Departure airfield"/>
