--- a/src/main/webapp/becomeAPilot.html
+++ b/src/main/webapp/becomeAPilot.html
@@ -21,12 +21,12 @@
                     <div class="flight-form">
                         <h2 class="form-title">Become a Pilot</h2>
                         <!-- method="PUT" action="/ws/coavionnage/users/flight" -->
-                        <form class="register-form" id="register-form"> 
+                        <form class="register-form" id="become_pilot_form"> 
                             <div class="form-group">
-                                <input type="text" name="name" id="name" placeholder="Experience"/>
+                                <input type="text" name="name" id="experience" placeholder="Experience"/>
                             </div>
                             <div class="form-group">
-                                <input type="text" name="name" id="name" placeholder="Qualifications"/>
+                                <input type="text" name="name" id="qualifications" placeholder="Qualifications"/>
                             </div>
                             <div class="form-group">
                                 <input type="number" name="number" id="number" placeholder="Number of flight hours"/>
@@ -45,7 +45,7 @@
     <!-- JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/main.js"></script>
-    <script src="home.js"></script>
+    <script src="js/pilot.js"></script>
 </body>
 </html>
 
