--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -12,11 +12,12 @@
 <body>
 
 	<div class="tab">
-		<a href="signUp.html"><button class="tablinks"> Sign Up</button></a>
-		<a href="login.html"><button class="tablinks">Log in</button></a>
-		<a href="deleteFlight.html"><button class="tablinks">Delete a Flight</button></a>
-		<a href="planAFlight.html"><button class="tablinks">Plan a Flight</button></a>
-		<a href="becomeAPilot.html"><button class="tablinks">Become a Pilot</button></a>
+		<a id="btn-signup" href="signUp.html"><button class="tablinks"> Sign Up</button></a>
+		<a id="btn-login" href="login.html"><button class="tablinks">Log in</button></a>
+		<a id="btn-logout" href="#"><button class="tablinks">Log out</button></a>
+		<a id="btn-delete-flight" href="deleteFlight.html"><button class="tablinks">Delete a Flight</button></a>
+		<a id="btn-plan-flight" href="planAFlight.html"><button class="tablinks">Plan a Flight</button></a>
+		<a id="btn-become-pilot" href="becomeAPilot.html"><button class="tablinks">Become a Pilot</button></a>
 	</div>
 
 	<div class="image">
@@ -81,6 +82,7 @@
 
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script src="js/navbuttons.js"></script>
 	<script src="home.js"></script>
 </body>
 
