--- a/src/main/webapp/signUp.html
+++ b/src/main/webapp/signUp.html
@@ -15,6 +15,7 @@
 </head>
 <body>
     <div class="tab">
+        <a href="login.html"><button class="tablink">Sign in</button></a>
         <a href="home.html"><button class="tablink">Home</button></a>
 	</div>
 
@@ -58,6 +59,7 @@
         </section>
     <!-- JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="vendor/notify.min.js"></script>
     <script src="js/signUp.js"></script>
 </body>
 </html>
