--- a/src/main/webapp/becomeAPilot.html
+++ b/src/main/webapp/becomeAPilot.html
@@ -23,7 +23,7 @@
                         <!-- method="PUT" action="/ws/coavionnage/users/flight" -->
                         <form class="register-form" id="become_pilot_form"> 
                             <div class="form-group">
-                                <input type="text" name="name" id="experience" placeholder="Experience"/>
+                                <input type="number" name="name" id="experience" placeholder="Experience"/>
                             </div>
                             <div class="form-group">
                                 <input type="text" name="name" id="qualifications" placeholder="Qualifications"/>
