--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -4,8 +4,7 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="css/home.css">
-	<link rel="stylesheet" type="text/css"
-	href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 
@@ -55,7 +54,7 @@
 		</div>
 		<div id="flights-div" class="flightList">
 			<h2>Flights list</h2>
-			<table>
+			<table class="table table-primary">
 				<thead>
 					<tr>
 						<th>Id</th>
