--- a/src/main/webapp/signUp.html
+++ b/src/main/webapp/signUp.html
@@ -30,8 +30,12 @@
                         <!-- method="PUT" action="/ws/coavionnage/users/signup" -->
                         <form class="register-form" id="register-form"> 
                             <div class="form-group">
-                                <label for="name"><i class="zmdi zmdi-account material-icons-name"></i></label>
-                                <input type="text" name="name" id="name" placeholder="Your Name"/>
+                                <label for="firstname"><i class="zmdi zmdi-account material-icons-name"></i></label>
+                                <input type="text" name="firstname" id="firstname" placeholder="Your firstname"/>
+                            </div>
+                            <div class="form-group">
+                                <label for="lastname"><i class="zmdi zmdi-account material-icons-name"></i></label>
+                                <input type="text" name="lastname" id="lastname" placeholder="Your lastname"/>
                             </div>
                             <div class="form-group">
                                 <label for="email"><i class="zmdi zmdi-email"></i></label>
