ajout de pilot et profil

--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -3,8 +3,9 @@
 
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="css/home.css">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="css/home.css">
+	
 </head>
 
 
@@ -14,13 +15,14 @@
 		<a id="btn-signup" href="signUp.html"><button class="tablinks"> Sign Up</button></a>
 		<a id="btn-login" href="login.html"><button class="tablinks">Log in</button></a>
 		<a id="btn-logout" href="#"><button class="tablinks">Log out</button></a>
+		<a id="btn-user-profile" href="userProfile.html"><button class="tablinks">Profile</button></a>
 		<a id="btn-delete-flight" href="deleteFlight.html"><button class="tablinks">Delete a Flight</button></a>
 		<a id="btn-plan-flight" href="planAFlight.html"><button class="tablinks">Plan a Flight</button></a>
 		<a id="btn-become-pilot" href="becomeAPilot.html"><button class="tablinks">Become a Pilot</button></a>
 	</div>
 
 	<div class="image">
-		<img src="images/aircraft2.jpg" alt="Nature" style="width:100%;">
+		<!-- <img src="images/aircraft2.jpg" alt="Nature" style="width:100%;"> -->
 		<div class="flight-engine">
 			<div class="container">
 				<div class="tabing">
@@ -53,7 +55,6 @@
 			</div>
 		</div>
 		<div id="flights-div" class="flightList">
-			<h2>Flights list</h2>
 			<table class="table table-primary">
 				<thead>
 					<tr>
