--- a/src/main/webapp/bookFlight.html
+++ b/src/main/webapp/bookFlight.html
@@ -39,6 +39,7 @@
     <!-- JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="vendor/notify.min.js"></script>
     <script src="js/booking.js"></script>
 </body>
 </html>
