userPilot.html, pilotInformations.html

--- a/src/main/webapp/pilotInformations.html
+++ b/src/main/webapp/pilotInformations.html
@@ -2,8 +2,7 @@
 <head>
     <title>Pilot Infomations</title>
     <!-- Main css -->
-    <link rel="stylesheet" href="css/flight.css">
-    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/profile.css">
 </head>
 
 <body>
@@ -14,14 +13,17 @@
 	</div>
 
     <div class="main">
-        <section class="flight">
+        <section class="user">
             <div class="container">
-                <div class="flight-content">
-                    <div class="flight-form">
+                <div class="user-content">
+                    <div class="user-form">
                         <h2 class="form-title">Pilot</h2>
-                            <table style="width: 50%">
+                            <table style="width: 100%">
                                 <tr>
-                                    <td>Name :</td>
+                                    <td>First name :</td>
+                                </tr>
+                                <tr>
+                                    <td>Last name :</td>
                                 </tr>
                                 <tr>
                                     <td>Experience :</td>
@@ -34,7 +36,7 @@
                                 </tr>
                             </table>
                     </div>
-                    <div class="flight-image">
+                    <div class="user-image">
                         <figure><img src="images/avatar.jpeg" ></figure>
                     </div>
                 </div>
