--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -13,8 +13,8 @@
 
 	<div class="tab">
 		<a id="btn-signup" href="signUp.html"><button class="tablinks"> Sign Up</button></a>
-		<a id="btn-login" href="login.html"><button class="tablinks">Log in</button></a>
-		<a id="btn-logout" href="#"><button class="tablinks">Log out</button></a>
+		<a id="btn-login" href="login.html"><button class="tablinks">Sign in</button></a>
+		<a id="btn-logout" href="#"><button class="tablinks">Sign out</button></a>
 		<a id="btn-user-profile" href="userProfile.html"><button class="tablinks">Profile</button></a>
 		<a id="btn-delete-flight" href="deleteFlight.html"><button class="tablinks">Delete a Flight</button></a>
 		<a id="btn-plan-flight" href="planAFlight.html"><button class="tablinks">Plan a Flight</button></a>
