--- a/src/main/webapp/userProfile.html
+++ b/src/main/webapp/userProfile.html
@@ -2,8 +2,7 @@
 <head>
     <title>Pilot Infomations</title>
     <!-- Main css -->
-    <link rel="stylesheet" href="css/flight.css">
-    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/profile.css">
 </head>
 
 <body>
@@ -12,14 +11,13 @@
 		<a href="deleteFlight.html"><button class="tablinks">Delete a Flight</button></a>
 		<a href="planAFlight.html"><button class="tablinks">Plan a Flight</button></a>
 	</div>
-
     <div class="main">
-        <section class="flight">
+        <section class="user">
             <div class="container">
-                <div class="flight-content">
-                    <div class="flight-form">
+                <div class="user-content">
+                    <div class="user-form">
                         <h2 class="form-title">User profile</h2>
-                            <table style="width: 50%">
+                            <table style="width: 100%">
                                 <tr>
                                     <td>First name :</td>
                                     <td id="user_first_name"></td>
@@ -34,8 +32,10 @@
                                 </tr>
                             </table>
                     </div>
-                    <div class="flight-image">
+                    <div class="user-image">
                         <figure><img src="images/avatar.jpeg" ></figure>
+                        <a href="signUp.html" class="user-image-link">Modify your account</a>
+                        <a href="login.html" class="user-image-link">Delete your account</a>
                     </div>
                 </div>
             </div>
