--- a/src/main/webapp/becomeAPilot.html
+++ b/src/main/webapp/becomeAPilot.html
@@ -45,6 +45,7 @@
     <!-- JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="vendor/notify.min.js"></script>
     <script src="js/pilot.js"></script>
 </body>
 </html>
