--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -48,6 +48,7 @@
     </div>
     <!-- JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="vendor/notify.min.js"></script>
     <script src="js/login.js"></script>
 </body>
 </html>
