--- a/src/main/webapp/deleteFlight.html
+++ b/src/main/webapp/deleteFlight.html
@@ -35,6 +35,7 @@
     <!-- JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="vendor/notify.min.js"></script>
     <script src="js/deleteFlight.js"></script>
 </body>
 </html>
