--- a/src/main/webapp/userProfile.html
+++ b/src/main/webapp/userProfile.html
@@ -34,8 +34,8 @@
                     </div>
                     <div class="user-image">
                         <figure><img src="images/avatar.jpeg" ></figure>
-                        <a href="signUp.html" class="user-image-link">Modify your account</a>
-                        <a href="login.html" class="user-image-link">Delete your account</a>
+                        <a href="modifyUser.html" class="user-image-link">Modify your account</a>
+                        <a id="btn-delete-user" href="#" class="user-image-link">Delete your account</a>
                     </div>
                 </div>
             </div>
