pilot info marche

--- a/src/main/webapp/pilotInformations.html
+++ b/src/main/webapp/pilotInformations.html
@@ -21,18 +21,27 @@
                             <table style="width: 100%">
                                 <tr>
                                     <td>First name :</td>
+                                    <td id="pilot_first_name"></td>
                                 </tr>
                                 <tr>
                                     <td>Last name :</td>
+                                    <td id="pilot_last_name"></td>
+                                </tr>
+                                <tr>
+                                    <td>Email :</td>
+                                    <td id="pilot_email"></td>
                                 </tr>
                                 <tr>
                                     <td>Experience :</td>
+                                    <td id="pilot_experience"></td>
                                 </tr>
                                 <tr>
                                     <td>Qualifications :</td>
+                                    <td id="pilot_qualifications"></td>
                                 </tr>
                                 <tr>
                                     <td>Number of flight hours :</td>
+                                    <td id="pilot_nb_flight_hours"></td>
                                 </tr>
                             </table>
                     </div>
