des imagaes ont été modifiées

--- a/src/main/webapp/becomeAPilot.html
+++ b/src/main/webapp/becomeAPilot.html
@@ -8,6 +8,7 @@
 
 <body>
     <div class="tab">
+        <a id="btn-logout" href="#"><button class="tablinks">Sign out</button></a>
         <a href="home.html"><button class="tablinks">Home</button></a>
 	</div>
 
@@ -35,7 +36,7 @@
                         </form>
                     </div>
                     <div class="flight-image">
-                        <figure><img src="images/avatar.jpeg" ></figure>
+                        <figure><img src="images/pilot2.png" ></figure>
                     </div>
                 </div>
             </div>
