--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -22,7 +22,7 @@
             <div class="container">
                 <div class="signin-content">
                     <div class="signin-image">
-                        <figure><img src="images/signin-image2.jpg" alt="sing up image"></figure>
+                        <figure><img src="images/signin-image.jpg" alt="sing up image"></figure>
                         <a href="signUp.html" class="signup-image-link">Create an account</a>
                     </div>
 
