--- a/src/main/webapp/modifyPilotProfile.html
+++ b/src/main/webapp/modifyPilotProfile.html
@@ -36,7 +36,7 @@
                         </form>
                     </div>
                     <div class="flight-image">
-                        <figure><img src="images/avatar.jpeg" ></figure>
+                        <figure><img src="images/pilot3.jpg" ></figure>
                     </div>
                 </div>
             </div>
