--- a/src/main/webapp/pilotInformations.html
+++ b/src/main/webapp/pilotInformations.html
@@ -46,7 +46,7 @@
                             </table>
                     </div>
                     <div class="user-image">
-                        <figure><img src="images/avatar.jpeg" ></figure>
+                        <figure><img src="images/pilot3.png" ></figure>
                     </div>
                 </div>
             </div>
