--- a/src/main/webapp/planAFlight.html
+++ b/src/main/webapp/planAFlight.html
@@ -59,7 +59,7 @@
                         </form>
                     </div>
                     <div class="flight-image">
-                        <figure><img src="images/airport.jpg" ></figure>
+                        <figure><img src="images/flight2.jpg" ></figure>
                     </div>
                 </div>
             </div>
