--- a/src/main/webapp/userProfile.html
+++ b/src/main/webapp/userProfile.html
@@ -7,6 +7,7 @@
 
 <body>
     <div class="tab">
+        <a id="btn-logout" href="#"><button class="tablinks">Sign out</button></a>
         <a href="home.html"><button class="tablinks">Home</button></a>
 		<a href="deleteFlight.html"><button class="tablinks">Delete a Flight</button></a>
 		<a href="planAFlight.html"><button class="tablinks">Plan a Flight</button></a>
