--- a/src/main/webapp/modifyUser.html
+++ b/src/main/webapp/modifyUser.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div class="tab">
-        <a href="login.html"><button class="tablink">Sign in</button></a>
+        <a id="btn-logout" href="#"><button class="tablinks">Sign out</button></a>
         <a href="home.html"><button class="tablink">Home</button></a>
 	</div>
 
@@ -55,7 +55,7 @@
                         </form>
                     </div>
                     <div class="signup-image">
-                        <figure><img src="images/signin-image2.jpg" alt="sing up image"></figure>
+                        <figure><img src="images/modifProfile.jpeg" alt="sing up image"></figure>
                     </div>
                 </div>
             </div>
