modify user and pilot profile

--- a/src/main/webapp/bookFlight.html
+++ b/src/main/webapp/bookFlight.html
@@ -8,6 +8,7 @@
 
 <body>
     <div class="tab">
+        <a id="btn-logout" href="#"><button class="tablinks">Sign out</button></a>
         <a href="home.html"><button class="tablinks">Home</button></a>
 	</div>
 
@@ -39,6 +40,7 @@
     <script src="js/main.js"></script>
     <script src="vendor/notify.min.js"></script>
     <script src="js/booking.js"></script>
+    <script src="js/navbuttons.js"></script>
 </body>
 </html>
 
