--- a/src/main/webapp/deleteFlight.html
+++ b/src/main/webapp/deleteFlight.html
@@ -8,7 +8,9 @@
 
 <body>
     <div class="tab">
+        <a id="btn-logout" href="#"><button class="tablinks">Sign out</button></a>
         <a href="home.html"><button class="tablink">Home</button></a>
+        <a id="btn-plan-flight" href="planAFlight.html"><button class="tablinks">Plan a Flight</button></a>
 	</div>
     <div class="main">
         <section class="flight">
@@ -37,6 +39,7 @@
     <script src="js/main.js"></script>
     <script src="vendor/notify.min.js"></script>
     <script src="js/deleteFlight.js"></script>
+    <script src="js/navbuttons.js"></script>
 </body>
 </html>
 
