--- a/src/main/webapp/planAFlight.html
+++ b/src/main/webapp/planAFlight.html
@@ -9,6 +9,7 @@
 
 <body>
     <div class="tab">
+        <a id="btn-logout" href="#"><button class="tablinks">Sign out</button></a>
         <a href="home.html"><button class="tablink">Home</button></a>
 	</div>
 
@@ -70,6 +71,7 @@
     <script src="vendor/notify.min.js"></script>
     <script src="vendor/jquery.datetimepicker.full.min.js"></script>
     <script src="js/planAFlight.js"></script>
+    <script src="js/navbuttons.js"></script>
 </body>
 </html>
 
