--- a/src/main/webapp/userProfile.html
+++ b/src/main/webapp/userProfile.html
@@ -9,8 +9,8 @@
     <div class="tab">
         <a id="btn-logout" href="#"><button class="tablinks">Sign out</button></a>
         <a href="home.html"><button class="tablinks">Home</button></a>
-		<a href="deleteFlight.html"><button class="tablinks">Delete a Flight</button></a>
-		<a href="planAFlight.html"><button class="tablinks">Plan a Flight</button></a>
+		<a id="btn-delete-flight" href="deleteFlight.html"><button class="tablinks">Delete a Flight</button></a>
+		<a id="btn-plan-flight" href="planAFlight.html"><button class="tablinks">Plan a Flight</button></a>
 	</div>
     <div class="main">
         <section class="user">
@@ -44,6 +44,7 @@
     <!-- JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/userProfile.js"></script>
+    <script src="js/navbuttons.js"></script>
 </body>
 </html>
 
