--- a/src/main/webapp/becomeAPilot.html
+++ b/src/main/webapp/becomeAPilot.html
@@ -46,6 +46,7 @@
     <script src="js/main.js"></script>
     <script src="vendor/notify.min.js"></script>
     <script src="js/pilot.js"></script>
+    <script src="js/navbuttons.js"></script>
 </body>
 </html>
 
