--- a/src/main/webapp/flightInformations.html
+++ b/src/main/webapp/flightInformations.html
@@ -52,6 +52,7 @@
     <!-- JS -->
     <script src="js/main.js"></script>
     <script src="home.js"></script>
+    <script src="js/navbuttons.js"></script>
 </body>
 </html>
 
