--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -15,8 +15,8 @@
 		<a id="btn-signup" href="signUp.html"><button class="tablinks"> Sign Up</button></a>
 		<a id="btn-login" href="login.html"><button class="tablinks">Sign in</button></a>
 		<a id="btn-logout" href="#"><button class="tablinks">Sign out</button></a>
-		<a id="btn-user-profile" href="userProfile.html"><button class="tablinks">Profile</button></a>
-		<a id="btn-modify-pilot-profile" href="modifyPilotProfile.html"><button class="tablinks">Modify Pilot Profile</button></a>
+		<a id="btn-profile" href="#"><button class="tablinks">Profile</button></a>
+		<!-- <a id="btn-modify-pilot-profile" href="modifyPilotProfile.html"><button class="tablinks">Modify Pilot Profile</button></a> -->
 		<a id="btn-delete-flight" href="deleteFlight.html"><button class="tablinks">Delete a Flight</button></a>
 		<a id="btn-modify-flight" href="modifyFlight.html"><button class="tablinks">Modify a Flight</button></a>
 		<a id="btn-plan-flight" href="planAFlight.html"><button class="tablinks">Plan a Flight</button></a>
