--- a/src/main/webapp/modifyPilotProfile.html
+++ b/src/main/webapp/modifyPilotProfile.html
@@ -8,9 +8,10 @@
 
 <body>
     <div class="tab">
+        <a id="btn-logout" href="#"><button class="tablinks">Sign out</button></a>
         <a href="home.html"><button class="tablinks">Home</button></a>
-		<a href="deleteFlight.html"><button class="tablinks">Delete a Flight</button></a>
-		<a href="planAFlight.html"><button class="tablinks">Plan a Flight</button></a>
+		<a id="btn-delete-flight" href="deleteFlight.html"><button class="tablinks">Delete a Flight</button></a>
+		<a id="btn-plan-flight" href="planAFlight.html"><button class="tablinks">Plan a Flight</button></a>
 	</div>
 
     <div class="main">
@@ -20,7 +21,19 @@
                 <div class="flight-content">
                     <div class="flight-form">
                         <h2 class="form-title">Modify Pilot Profile</h2>
-                        <form class="register-form" id="become_pilot_form"> 
+                        <form class="register-form" id="modify_pilot_form"> 
+                            <div class="form-group">
+                                <label for="firstname"><i class="zmdi zmdi-account material-icons-name"></i></label>
+                                <input type="text" name="firstname" id="firstname" placeholder="Your firstname"/>
+                            </div>
+                            <div class="form-group">
+                                <label for="lastname"><i class="zmdi zmdi-account material-icons-name"></i></label>
+                                <input type="text" name="lastname" id="lastname" placeholder="Your lastname"/>
+                            </div>
+                            <div class="form-group">
+                                <label for="email"><i class="zmdi zmdi-email"></i></label>
+                                <input type="email" name="email" id="email" placeholder="Your Email"/>
+                            </div>
                             <div class="form-group">
                                 <input type="number" name="name" id="experience" placeholder="Experience"/>
                             </div>
@@ -29,6 +42,14 @@
                             </div>
                             <div class="form-group">
                                 <input type="number" name="number" id="number" placeholder="Number of flight hours"/>
+                            </div>
+                            <div class="form-group">
+                                <label for="pass"><i class="zmdi zmdi-lock"></i></label>
+                                <input type="password" name="password" id="password" placeholder="Password"/>
+                            </div>
+                            <div class="form-group">
+                                <label for="re-pass"><i class="zmdi zmdi-lock-outline"></i></label>
+                                <input type="password" name="re_pass" id="re_pass" placeholder="Repeat your password"/>
                             </div>
                             <div class="form-group form-button">
                                 <input type="submit" name="valid" id="flight" class="form-submit" value="Valid"/>
@@ -46,6 +67,7 @@
     <script src="js/main.js"></script>
     <script src="vendor/notify.min.js"></script>
     <script src="js/modifyPilotProfile.js"></script>
+    <script src="js/navbuttons.js"></script>
 </body>
 </html>
 
