--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -80,13 +80,9 @@
 		</div>
 	</div>
 
-	
-
-
-
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="js/navbuttons.js"></script>
-	<script src="home.js"></script>
+	<script src="js/home.js"></script>
 </body>
 
 </html>
