--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -18,7 +18,7 @@
 		<a id="btn-profile" href="#"><button class="tablinks">Profile</button></a>
 		<!-- <a id="btn-modify-pilot-profile" href="modifyPilotProfile.html"><button class="tablinks">Modify Pilot Profile</button></a> -->
 		<a id="btn-delete-flight" href="deleteFlight.html"><button class="tablinks">Delete a Flight</button></a>
-		<a id="btn-modify-flight" href="modifyFlight.html"><button class="tablinks">Modify a Flight</button></a>
+		<a id="btn-modify-flight" href="modifyAFlight.html"><button class="tablinks">Modify a Flight</button></a>
 		<a id="btn-plan-flight" href="planAFlight.html"><button class="tablinks">Plan a Flight</button></a>
 		<a id="btn-become-pilot" href="becomeAPilot.html"><button class="tablinks">Become a Pilot</button></a>
 		
